--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <!-- CSS only -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
@@ -40,50 +41,41 @@
             </div>
         </div>
     </main>
-    <section id="myRoleSection">
-        <div class="flexContainer">
-            <div class="flexContainer--column">
-                <div class="container--txtWrap--narrow">
-                    <h3>Background</h3>
-                    <p>In our University of Toronto UX/UI Bootcamp we were tasked with the challenge of developing a destop and mobile RWD redesign and update for a Government Agency website.</p>
-                </div>
+    <!-- bootstrap 4 col system html starts here -->
+    <div id="colSystem" class="container">
+        <div class="row">
+            <div class="col-lg-4 col-md-4 col-sm-12">
+                <h3>Background</h3>
+                <p>In our University of Toronto UX/UI Bootcamp we were tasked with the challenge of developing a destop and mobile RWD redesign and update for a Government Agency website.</p>
             </div>
-            <div flexContainer--column>
-                <div class="container--txtWrap--narrow">
-                    <h3>My Role</h3>
-                    <p>As a team of UX designers it was our role to research and define problems users were experiencing with the current CBC Radio-Canada website. Following this, it was my role as our teams solo UI designer to ideate, design, prototype,
-                        test and iterate user-centric solutions that would solve our defined problem and provide CBC Radio-Canada the ability to further engage users with their mandate. </p>
-                </div>
+            <div class="col-lg-4 col-md-4 col-sm-12">
+                <h3>My Role</h3>
+                <p>As a team of UX designers it was our role to research and define problems users were experiencing with the current CBC Radio-Canada website. Following this, it was my role as our teams solo UI designer to ideate, design, prototype, test
+                    and iterate user-centric solutions that would solve our defined problem and provide CBC Radio-Canada the ability to further engage users with their mandate. </p>
             </div>
-            <div class="flexContainer--column">
-                <div class="container--txtWrap--narrow">
-                    <h3>Tools</h3>
-                    <p>Miro, Figma, Adobe Illustrator, Google Suites, UsabilityHub</p>
-                    <h3>Duration</h3>
-                    <p>4 weeks</p>
-                </div>
+            <div class="ccol-lg-4 col-md-4 col-sm-12">
+                <h3>Tools</h3>
+                <p>Miro, Figma, Adobe Illustrator, Google Suites, UsabilityHub</p>
+                <h3>Duration</h3>
+                <p>4 weeks</p>
             </div>
-
         </div>
-    </section>
-
-    <section id="problemSection">
-        <div class="contentContainer flexContainer ">
-            <div class="flexContainer--column container--txtWrap--narrow ">
-                <h2>Problem</h2>
+        <div class="row">
+            <div class="col-lg-4 col-md-4 col-sm-12">
+                <h3>Problem</h3>
                 <p>People had difficulty understanding the site's main purpose to inform, enlighten and entertain because of confusing navigation, a cluttered header, disorganized secondary links and utilities, poor content layout, unclear media types and
                     lack of appropriate calls to action. </p>
             </div>
-            <div class="flexContainer--column container--txtWrap--narrow ">
-                <h2>Solution</h2>
+            <div class="col-lg-4 col-md-4 col-sm-12">
+                <h3>Solution</h3>
                 <p> Clearly layout and establish proper hierarchy of primary navigation and secondary toolbar quick links, redefine navigation tab headings to make clearer path for user to find what they are looking for, define media types, categorize available
                     media content (primary media, behind the scenes), implement clear CTA’s (call to action). </p>
             </div>
+            <div class="col-lg-4 col-md-4 col-sm-12">
+
+            </div>
         </div>
-
-
-
-
+    </div>
 
     </section>
     <div class="sectionDivide"></div>
@@ -206,16 +198,50 @@
                 <img src="images/key areas of impact.svg">
 
             </div>
-            <!-- bootstrap 4 using Carosel -->
-            <div class="contentContainer flexContainer">
-                <div id="corsel">this is where carosel goes</div>
-            </div>
+        </div>
+        <!-- bootstrap 4 using Carosel -->
+        <div class="contentContainer flexContainer">
+            <section id="carousel">
+                <div id="carouselExampleIndicators" class="carousel" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img class="d-block w-100" src="images/carosel img 1.svg" alt="First slide">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="images/carosel img 2.svg" alt="Second slide">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="images/carosel img 3.svg" alt="Third slide">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="images/carosel img 4.svg" alt="Forth slide">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="images/carosel img 5.svg" alt="Fifth slide">
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+        </div>
         </div>
 
-        <div class="flexContainer flexContainer--column container--txtWrap--narrow">
+        <div class="flexContainer flexContainer--column imgWrap--80p">
             <h3 class="hStyleRed">Goals and Priorities</h3>
             <img src="images/goals and priorities.svg">
         </div>
+
 
         <div class="sectionDivide"></div>
         <h2 class="sectionHeading hStyleRed">Strategy</h2>
@@ -266,84 +292,92 @@
             </div>
             <img src="images/initial homepage annotations and Iderations - homepage annotations and iterations from test feedback 1 1.svg">
         </div>
-    </section>
-    <section id="researchEnd">
+        </section>
+        <section id="researchEnd">
 
-        <div class="contentContainer flexContainer ">
-            <div class="container--txtWrap--narrow">
-                <p>In Iterating upon the feedback from 5 second user tests, our team moved from the primary UX research phase into our UI Redesign Phase.</p>
-            </div>
-
-        </div>
-    </section>
-    <section id="redesignSection">
-
-        <div class="flexContainer flexContainer--column">
-            <h1 id="redesignHead">Redesign</h1>
-            <img src="images/redesign process (1).svg">
-        </div>
-        <div class="contentContainer flexContainer">
-            <div class="flexContainer flexContainer--column container--txtWrap--narrow">
-                <h3 class="hStyleRed">Wireframes</h3>
-                <p>After developing iterated versions of navigation and primary UI elements our team completed Lo-fi and Hi-Fi wireframes through analysis, iteration and testing for both desktop and mobile. </p>
-                <p>Our wireframes were focused on the key screens our User Persona would navigate and reflected the goals of CBC Radio-Canada. </p>
+            <div class="contentContainer flexContainer ">
+                <div class="container--txtWrap--narrow">
+                    <p>In Iterating upon the feedback from 5 second user tests, our team moved from the primary UX research phase into our UI Redesign Phase.</p>
+                </div>
 
             </div>
-            <img src=>
-        </div>
-        <div class="contentContainer--flexStart flexContainer">
-            <div class="flexContainer flexContainer--column container--txtWrap--narrow">
-                <h3 class="hStyleRed">Lo-fi Desktop Wireframes</h3>
-                <img src="images/lofi desktop wireframes.svg">
+        </section>
+        <section id="redesignSection">
+
+            <div class="flexContainer flexContainer--column">
+                <h1 id="redesignHead">Redesign</h1>
+                <img src="images/redesign process (1).svg">
+            </div>
+            <div class="contentContainer flexContainer">
+                <div class="flexContainer flexContainer--column container--txtWrap--narrow">
+                    <h3 class="hStyleRed">Wireframes</h3>
+                    <p>After developing iterated versions of navigation and primary UI elements our team completed Lo-fi and Hi-Fi wireframes through analysis, iteration and testing for both desktop and mobile. </p>
+                    <p>Our wireframes were focused on the key screens our User Persona would navigate and reflected the goals of CBC Radio-Canada. </p>
+
+                </div>
+                <div class="container--txtWrap--narrow imgWrap--narrow50">
+                    <img src="images/gif cbc Desktop wireframe.gif">
+                    <img src="images/gif cbc Mobile Wireframes.gif">
+                </div>
+            </div>
+            <div class="contentContainer flexContainer">
+                <div class="flexContainer flexContainer--column ">
+                    <h3 class="hStyleRed">Lo-fi Desktop Wireframes</h3>
+                    <img src="images/lofi desktop wireframes.svg">
+
+                </div>
 
             </div>
+            <div class="contentContainer flexContainer">
+                <div class="flexContainer flexContainer--column ">
+                    <h3 class="hStyleRed">Lo-fi Mobile Wireframes</h3>
+                    <img src="images/lofi mobile wireframes.svg">
+                </div>
+                <div class="contentContainer">
 
-        </div>
-        <div class="contentContainer--flexStart flexContainer">
-            <div class="flexContainer flexContainer--column container--txtWrap--narrow">
-                <h3 class="hStyleRed">Lo-fi Mobile Wireframes</h3>
-                <img src="images/lofi mobile wireframes.svg">
+                </div>
             </div>
+            <div class="contentContainer flexContainer">
+                <div class="flexContainer flexContainer--column">
+                    <h3 class="hStyleRed">Hi-fi Desktop Wireframes</h3>
 
-        </div>
-        <div class="contentContainer--flexStart flexContainer">
-            <div class="flexContainer flexContainer--column container--txtWrap--narrow">
-                <h3 class="hStyleRed">Hi-fi Desktop Wireframes</h3>
+
+                </div>
                 <img src="images/hifi wireframes.svg">
+            </div>
+            <div class="contentContainer flexContainer">
+                <div class="flexContainer flexContainer--column">
+                    <h3 class="hStyleRed">Hi-fi Mobile Wireframes</h3>
+                    <img src="images/hifi mobile wireframes.svg">
+                </div>
 
             </div>
 
-        </div>
-        <div class="contentContainer--flexStart flexContainer">
-            <div class="flexContainer flexContainer--column container--txtWrap--narrow">
-                <h3 class="hStyleRed">Hi-fi Mobile Wireframes</h3>
-                <img src="images/hifi mobile wireframes.svg">
+            <div class="sectionDivide"></div>
+            <h2 class="sectionHeading hStyleRed">Prototype</h2>
+            <div class="contentContainer flexContainer">
+                <div class="flexContainer flexContainer--column container--txtWrap--narrow">
+                    <h3 class="hStyleRed">Lo-fi Prototypess</h3>
+                    <p></p>
+                </div>
+                <img src=>
             </div>
+            <div class="contentContainer flexContainer">
+                <div class="flexContainer flexContainer--column container--txtWrap--narrow">
+                    <h3 class="hStyleRed">Wireframes</h3>
+                    <p></p>
+                    <p></p>
 
-        </div>
-
-        <div class="sectionDivide"></div>
-        <h2 class="sectionHeading hStyleRed">Prototype</h2>
-        <div class="contentContainer flexContainer">
-            <div class="flexContainer flexContainer--column container--txtWrap--narrow">
-                <h3 class="hStyleRed">Lo-fi Prototypess</h3>
-                <p></p>
+                </div>
+                <img src=>
             </div>
-            <img src=>
-        </div>
-        <div class="contentContainer flexContainer">
-            <div class="flexContainer flexContainer--column container--txtWrap--narrow">
-                <h3 class="hStyleRed">Wireframes</h3>
-                <p></p>
-                <p></p>
-
-            </div>
-            <img src=>
-        </div>
-    </section>
+        </section>
 
 </body>
 <!-- JavaScript Bundle with Popper -->
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js " integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2 " crossorigin="anonymous "></script>
 
 </html>
