--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                 <a class="btn btn-primary btn-lg" href="#" role="button">view case study</a>
             </div>
         </div>
+        <div class="sectionDivide1"></div>
     </main>
     <!-- bootstrap 4 col system html starts here -->
     <div id="colSystem" class="container">
@@ -78,7 +79,7 @@
     </div>
 
     </section>
-    <div class="sectionDivide"></div>
+    <div class="sectionDivide1"></div>
     <section id="researchSection">
 
         <div class="flexContainer flexContainer--column">
@@ -96,7 +97,7 @@
 
             <img src="images/cbc research questions.svg">
         </div>
-        <div class="sectionDivide"></div>
+        <div class="sectionDivide2"></div>
         <div class="contentContainer flexContainer">
             <div class="flexContainer flexContainer--column container--txtWrap--narrow">
                 <h3 class="hStyleRed">Research: User Test</h3>
@@ -115,11 +116,11 @@
             <div class="contentContainer flexContainer ">
                 <div class="flexContainer--column container--txtWrap--narrow ">
 
-                    <p>“I still need this website explained to me this site is not helping me find out about the radio”</p>
+                    <p class="clrStylelight">“I still need this website explained to me this site is not helping me find out about the radio”</p>
                 </div>
                 <div class="flexContainer--column container--txtWrap--narrow ">
 
-                    <p> “Tab had a bad heading for looking for podcast but I got lucky it being the first place I looked"</p>
+                    <p class="clrStylelight"> “Tab had a bad heading for looking for podcast but I got lucky it being the first place I looked"</p>
                 </div>
             </div>
         </section>
@@ -168,7 +169,7 @@
             </div>
 
         </div>
-        <div class="sectionDivide"></div>
+        <div class="sectionDivide2"></div>
         <h2 class="sectionHeading hStyleRed">Define</h2>
         <div class="contentContainer flexContainer">
             <div class="flexContainer flexContainer--column container--txtWrap--narrow">
@@ -238,12 +239,12 @@
         </div>
 
         <div class="flexContainer flexContainer--column imgWrap--80p">
-            <h3 class="hStyleRed">Goals and Priorities</h3>
+            <h3 class="txtCenter hStyleRed">Goals and Priorities</h3>
             <img src="images/goals and priorities.svg">
         </div>
 
 
-        <div class="sectionDivide"></div>
+        <div class="sectionDivide2"></div>
         <h2 class="sectionHeading hStyleRed">Strategy</h2>
         <div class="contentContainer flexContainer">
             <div class="flexContainer flexContainer--column container--txtWrap--narrow">
@@ -268,12 +269,12 @@
                 <p>Our team evaluated our priority matrix (defined from user testing analysis) in order to compare business and user priorities to strategize redesign features with positive impact. Coupled with our new site map we then determined why and
                     where to implement redesigns in our initial design solutions.</p>
             </div>
-            <img src="images/cbc site map.png">
+            <img src="images/cbc site map.svg">
         </div>
         <div id="impactDiagram">
             <img src="images/impact diagram.svg">
         </div>
-        <div class="sectionDivide"></div>
+        <div class="sectionDivide2"></div>
         <h2 class="sectionHeading hStyleRed">Design</h2>
         <div class="contentContainer flexContainer">
             <div class="flexContainer flexContainer--column container--txtWrap--narrow">
@@ -281,7 +282,9 @@
                 <p>Our initial design ideation started by sketching out the components of our new navigation and information hierarchy. Still in our research phase we looked to cycle back to user testing to, at a first glance, see if we were on the right
                     track towards addressing navigation layout concerns.</p>
             </div>
+
             <img src="images/initial design wireframe (1).svg">
+
         </div>
         <div class="contentContainer flexContainer">
             <div class="flexContainer flexContainer--column container--txtWrap--narrow">
@@ -293,15 +296,15 @@
             <img src="images/initial homepage annotations and Iderations - homepage annotations and iterations from test feedback 1 1.svg">
         </div>
         </section>
-        <section id="researchEnd">
 
-            <div class="contentContainer flexContainer ">
-                <div class="container--txtWrap--narrow">
-                    <p>In Iterating upon the feedback from 5 second user tests, our team moved from the primary UX research phase into our UI Redesign Phase.</p>
-                </div>
-
+        <div id="generalRemark" class="flexContainer container--txtWrap--narrow">
+            <div class="container--txtWrap--narrow">
+                <p>In Iterating upon the feedback from 5 second user tests, our team moved from the primary UX research phase into our UI Redesign Phase.</p>
             </div>
-        </section>
+
+        </div>
+
+        <div class="sectionDivide1"></div>
         <section id="redesignSection">
 
             <div class="flexContainer flexContainer--column">
@@ -322,7 +325,7 @@
             </div>
             <div class="contentContainer flexContainer">
                 <div class="flexContainer flexContainer--column ">
-                    <h3 class="hStyleRed">Lo-fi Desktop Wireframes</h3>
+                    <h3 class="txtCenter hStyleRed">Lo-fi Desktop Wireframes</h3>
                     <img src="images/lofi desktop wireframes.svg">
 
                 </div>
@@ -330,7 +333,7 @@
             </div>
             <div class="contentContainer flexContainer">
                 <div class="flexContainer flexContainer--column ">
-                    <h3 class="hStyleRed">Lo-fi Mobile Wireframes</h3>
+                    <h3 class="txtCenter hStyleRed">Lo-fi Mobile Wireframes</h3>
                     <img src="images/lofi mobile wireframes.svg">
                 </div>
                 <div class="contentContainer">
@@ -339,37 +342,136 @@
             </div>
             <div class="contentContainer flexContainer">
                 <div class="flexContainer flexContainer--column">
-                    <h3 class="hStyleRed">Hi-fi Desktop Wireframes</h3>
-
-
+                    <h3 class="txtCenter hStyleRed">Hi-fi Desktop Wireframes</h3>
+                    <img src="images/hifi wireframes.svg">
                 </div>
-                <img src="images/hifi wireframes.svg">
+
             </div>
             <div class="contentContainer flexContainer">
                 <div class="flexContainer flexContainer--column">
-                    <h3 class="hStyleRed">Hi-fi Mobile Wireframes</h3>
+                    <h3 class="txtCenter hStyleRed">Hi-fi Mobile Wireframes</h3>
                     <img src="images/hifi mobile wireframes.svg">
                 </div>
 
             </div>
 
-            <div class="sectionDivide"></div>
+            <div class="sectionDivide2"></div>
             <h2 class="sectionHeading hStyleRed">Prototype</h2>
             <div class="contentContainer flexContainer">
                 <div class="flexContainer flexContainer--column container--txtWrap--narrow">
                     <h3 class="hStyleRed">Lo-fi Prototypess</h3>
-                    <p></p>
+                    <p>In Figma we developed lo-fi clickable prototypes for both desktop and mobile devices. In shifting between desktop and mobile our designs sought to address usability issues and develop responsive design to determine how content and
+                        layout would stack and unpack at different pixel breakpoints and how we could keep features consistent at large and small screens.</p>
                 </div>
-                <img src=>
+
+                <div class="flexContainer flexContainer--column container--txtWrap--narrow">
+                    <h3 class="hStyleRed">Prototype Development</h3>
+                    <p>Our team continued to analyze and iterate designs from lo-fi to mid level and hi-fi prototypes through in team testing. Our in team testing methodology focused on designing from desktop to mobile and then building from mobile backup
+                        to desktop. We hoped this would allow us to develop useful features we could keep impactful at all screen sizes for both CBC Radio-Canada and our users.</p>
+                </div>
+
+
             </div>
             <div class="contentContainer flexContainer">
                 <div class="flexContainer flexContainer--column container--txtWrap--narrow">
-                    <h3 class="hStyleRed">Wireframes</h3>
-                    <p></p>
-                    <p></p>
-
+                    <h3 class="hStyleRed">Lo-fi Prototype Iteration</h3>
+                    <p>In working mobile back out to desktop we noticed our team could better exploit the “app” tabs feature we were ideating in lo-fi prototypes. This would help us solve some redundancy and result in tabs and navigation that had greater
+                        impact on usability and CBC Radio-Canada KPI’s. Implementing in desktop it established a defined secondary tool bar of quick links and addressed early issues of navigation. </p>
                 </div>
-                <img src=>
+                <img src="images/lo mobile tab iteration.svg">
+            </div>
+            <div class="contentContainer flexContainer">
+                <div class="flexContainer flexContainer--column container--txtWrap--narrow">
+                    <h3 class="hStyleRed">Hi-fi Prototypes</h3>
+                    <p>As development continued into hi-fidelity prototypes our Hi-fi wireframes more closely reflected our style guide and content from CBC Radio-Canada / CBC brand websites. At this stage we were still continuing to ideate and evaluate
+                        UI elements moving towards usability and A/B testing. From testing our team would iterate solutions and prepare final deliverables. </p>
+                </div>
+                <div class="alignAdjust--imgPushTxtFromCenter container--txtWrap--narrow">
+                    <img src="images/hi-fi protype pre iterations.png">
+                </div>
+            </div>
+            <div class="contentContainer flexContainer">
+                <div class="flexContainer flexContainer--column container--txtWrap--narrow">
+                    <h3 class="txtCenter hStyleRed">Ui Style Guide</h3>
+                    <img src="images/Style guide.png">
+                </div>
+            </div>
+            <div class="sectionDivide2"></div>
+            <h2 class="sectionHeading hStyleRed">Testing and Iteration</h2>
+            <div class="contentContainer flexContainer">
+                <div class="flexContainer flexContainer--column container--txtWrap--narrow">
+                    <h3 class="hStyleRed">A/B Testing</h3>
+                    <p>A/B testing was conducted with 3 male and female users ages 30-37.</p>
+                    <p>Users tested 4 prospective navigation header options to determine preferred search bar style and location. All users preferred option 4. (see below).</p>
+                </div>
+                <img src="images/a b test headers.svg">
+            </div>
+            <div class="contentContainer flexContainer">
+                <div class="flexContainer flexContainer--column container--txtWrap--narrow">
+                    <h3 class="hStyleRed">Hi-fi Prototype Usability Test</h3>
+                    <p>6 usability tests split across Hi-fi Desktop and Mobile prototypes were conducted. Tasks were designed to test navigation, content and aesthetic. Participants were mixed male and female and ranged from ages 31 to 37.</p>
+                    <p>Users had previously participated in initial testing of original website navigation pre redesign, I found this particularly helpful in making sure users problems and confusion had been addressed. Testing was instrumental in addressing
+                        problematic elements that still existed after Lo-fi prototypes.</p>
+                </div>
+                <div class="alignAdjust--imgPushTxtFromCenter container--txtWrap--narrow">
+                    <img src="images/gif hif pro usability test 1.gif"></div>
+            </div>
+            <div class="contentContainer flexContainer">
+                <div class="flexContainer flexContainer--column container--txtWrap--narrow">
+                    <h3 class="hStyleRed">Desktop Iterations</h3>
+                    <p>Based on desktop hi-fidelity prototype usability testing our team further developed our navigation header by moving utility links to footer and removing unnecessary “hamburger menu site map” feature which users felt was overwhelming
+                        and not useful. We also minimized and reorganized the content of our collapsible footer.</p>
+                </div>
+                <img src="images/Desktop HIFI Annotations and Iterations (cbc radio canada)  1.svg">
+            </div>
+            <div class="contentContainer flexContainer">
+                <div class="flexContainer flexContainer--column container--txtWrap--narrow">
+                    <h3 class="hStyleRed">Mobile Iterations</h3>
+                    <p>Based on mobile hi-fidelity prototype usability testing our team implemented a few iterations. We added horizontal scroll indicators to our top scroll menu and adjusted font weights and indicators on accordion menus.</p>
+                </div>
+                <div class="alignAdjust--imgPushTxtFromCenter">
+                    <img src="images/Mobile HIfi annotations and iterations (cbc radio canada 1.svg">
+                </div>
+            </div>
+            <div class="sectionDivide2"></div>
+            <h2 class="sectionHeading hStyleRed">Design Solutions</h2>
+            <div class="contentContainer flexContainer">
+                <div class="flexContainer flexContainer--column container--txtWrap--narrow">
+                    <h3 class="hStyleRed">Responsive Design</h3>
+                    <p>After the last stage of iterations our UI design team updated our responsive design guide for desktop, laptop, tablet and mobile breakpoints to reflect the final designs of our homepage.</p>
+                </div>
+                <div class="container--txtWrap--narrow">
+                    <img src="images/cbc Rwd homepages.png">
+                </div>
+            </div>
+
+            <div class="contentContainer flexContainer">
+                <div class="flexContainer flexContainer--column container--txtWrap--narrow">
+                    <h3 class="hStyleRed">Final Deliverables</h3>
+                    <p>Our iterations made us feel confident we had arrived at our final deliverables. Our team had addressed usability issues and implemented features that made navigation easier, distinctly displayed content of different media types and
+                        better organized the site for users to interact.</p>
+                </div>
+                <div class="txtCenter imgWrap--narrow50">
+                    <img src="images/gif final deliverablee deskyop.gif">
+                    <img src="images/gif final deliverable mobile.gif">
+                </div>
+            </div>
+            <div class="sectionDivide1"></div>
+            <h1 id="conclusionHead">Conclusion</h1>
+            <div class="txtCenter imgWrap--65p">
+                <img src="images/gif final deliverablee deskyop.gif" id="finalDesktop">
+                <img src="images/gif final deliverable mobile.gif" id="finalMobile">
+            </div>
+            <div class="contentContainer flexContainer">
+                <div class="flexContainer flexContainer--column container--txtWrap--narrow">
+                    <h3 class="hStyleRed">Final Thoughts</h3>
+                    <p> It is our belief that in adopting this redesign CBC Radio-Canada website will now be able to better engage Canadians and global users with the service of informing, enlightening, entertaining and providing transparency. </p>
+                </div>
+
+                <div class="flexContainer flexContainer--column container--txtWrap--narrow">
+                    <h3 class="hStyleRed">Next Steps</h3>
+                    <p>Continued A/B testing and iterations Continue to iterate site map Continue to iterate webcard layouts to find more appealing solution to highlighting content and different media types </p>
+                </div>
             </div>
         </section>
 
